--- a/cn_paper.html
+++ b/cn_paper.html
@@ -5,78 +5,96 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
- <meta name="description" content="Multi level hover dropdown Navbar for bootstrap 4">
-    <meta name="keywords" content="Multi level hover dropdown Navbar for bootstrap 4">
-    <title>CN-PAPER's</title>
+
+    <title>Freebie: 4 Bootstrap Gallery Templates</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
-    <link rel="stylesheet" href="gallery-grid.css">
+    <link rel="stylesheet" href="gallery-clean.css">
 
- 
+
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">GCOEA - Note </a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">  
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="cn.html"><span class="glyphicon glyphicon-book"></span>  Back To Theory</a></li>
-        <li><a href="Quiz/index.html"><span class="glyphicon glyphicon-education"></span>  Quiz-Time</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-
-
-
 <div class="container gallery-container">
 
-    <h1>All Computer Networking Paper's</h1>    
+    <h1>Bootstrap 3 Gallery</h1>
+
+    <p class="page-description text-center">Clean Layout With Minimal Styles</p>
+    
     <div class="tz-gallery">
 
         <div class="row">
+
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="images/9.jpeg">
-                    <img src="images/9.jpeg" alt="CT 2">
-                </a>
+                <div class="thumbnail">
+                    <a class="lightbox" href="../images/park.jpg">
+                        <img src="../images/park.jpg" alt="Park">
+                    </a>
+                    <div class="caption">
+                        <h3>Thumbnail label</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="images/9.jpeg">
-                    <img src="images/9.jpeg" alt="CT 2">
-                </a>
+                <div class="thumbnail">
+                    <a class="lightbox" href="../images/bridge.jpg">
+                        <img src="../images/bridge.jpg" alt="Bridge">
+                    </a>
+                    <div class="caption">
+                        <h3>Thumbnail label</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="images/9.jpeg">
-                    <img src="images/9.jpeg" alt="CT 2">
-                </a>
+                <div class="thumbnail">
+                    <a class="lightbox" href="../images/tunnel.jpg">
+                        <img src="../images/tunnel.jpg" alt="Tuneel">
+                    </a>
+                    <div class="caption">
+                        <h3>Thumbnail label</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="images/9.jpeg">
-                    <img src="images/9.jpeg" alt="CT 2">
-                </a>
+                <div class="thumbnail">
+                    <a class="lightbox" href="../images/coast.jpg">
+                        <img src="../images/coast.jpg" alt="Coast">
+                    </a>
+                    <div class="caption">
+                        <h3>Thumbnail label</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="images/9.jpeg">
-                    <img src="images/9.jpeg" alt="CT 2">
-                </a>
+                <div class="thumbnail">
+                    <a class="lightbox" href="../images/rails.jpg">
+                        <img src="../images/rails.jpg" alt="Rails">
+                    </a>
+                    <div class="caption">
+                        <h3>Thumbnail label</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="images/9.jpeg">
-                    <img src="images/9.jpeg" alt="CT 2">
-                </a>
+                <div class="thumbnail">
+                    <a class="lightbox" href="../images/traffic.jpg">
+                        <img src="../images/traffic.jpg" alt="Traffic">
+                    </a>
+                    <div class="caption">
+                        <h3>Thumbnail label</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
 
 </div>
@@ -85,15 +103,5 @@
 <script>
     baguetteBox.run('.tz-gallery');
 </script>
-   
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script src="js/bootnavbar.js" ></script>
-    <script>
-        $(function () {
-            $('#main_navbar').bootnavbar();
-        })
-    </script>
-</body></html>
+</body>
+</html>
