--- a/cn_tp/Services, problems and protocol.html
+++ b/cn_tp/Services, problems and protocol.html
@@ -159,10 +159,10 @@
                                 <a class="nav-link" href="#">Theory</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href=Papers/cn_paper.html>Papers</a>
+                                <a class="nav-link" href=../Papers/cn_paper.html>Papers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Quiz/index.html">Quiz-Time</a>
+                                <a class="nav-link" href="../Quiz/index.html">Quiz-Time</a>
                             </li>
                         </ul>
                     </div>
